--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,13 @@
 spring.datasource.url= jdbc:postgresql://localhost:5432/mood
-spring.datasource.username= root
-spring.datasource.password= root
+spring.datasource.username=admin
+spring.datasource.password=admin
 
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation= true
-spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 # Hibernate ddl auto (create, create-drop, validate, update)
-spring.jpa.hibernate.ddl-auto= update
+spring.jpa.hibernate.ddl-auto=update
 
 spring.datasource.initialization-mode=always
 spring.main.banner-mode=off
