--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,10 @@
-spring.datasource.url= jdbc:postgresql://localhost:5432/mood
-spring.datasource.username= admin
-spring.datasource.password= admin
+spring.datasource.url= jdbc:postgresql://localhost:5432/mood?createDatabaseIfNotExit=true
+spring.datasource.username= root
+spring.datasource.password= root
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation= true
+spring.datasource.driver-class-name= org.postgresql.Driver
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQLDialect
 
 # Hibernate ddl auto (create, create-drop, validate, update)
