--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+server.servlet.context-path= /api
+
 spring.datasource.url= jdbc:postgresql://localhost:5432/mood?createDatabaseIfNotExit=true
 spring.datasource.username= root
 spring.datasource.password= root
@@ -8,9 +10,12 @@ spring.datasource.driver-class-name= org.postgresql.Driver
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQLDialect
 
 # Hibernate ddl auto (create, create-drop, validate, update)
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 
 spring.datasource.initialization-mode=always
 spring.main.banner-mode=off
 logging.level.org.springframework=ERROR
 spring.datasource.platform=postgres
+
+spring.servlet.multipart.max-file-size=1MB
+spring.servlet.multipart.max-request-size=1MB
