--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,4 +12,5 @@ spring.jpa.hibernate.ddl-auto=update
 spring.datasource.initialization-mode=always
 spring.main.banner-mode=off
 logging.level.org.springframework=ERROR
+logging.level.org.springframework.boot.web.embedded.tomcat=INFO
 spring.datasource.platform=postgres
