--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 server.servlet.context-path= /api
 
 spring.datasource.url= jdbc:postgresql://localhost:5432/mood?createDatabaseIfNotExit=true
-spring.datasource.username=admin
-spring.datasource.password=admin
+spring.datasource.username=root
+spring.datasource.password=root
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation= true
@@ -14,8 +14,9 @@ spring.jpa.hibernate.ddl-auto=update
 
 spring.datasource.initialization-mode=always
 spring.main.banner-mode=off
-logging.level.org.springframework=ERROR
-logging.level.org.springframework.boot.web.embedded.tomcat=INFO
+# logging.level.org.springframework=ERROR
+# logging.level.org.springframework.boot.autoconfigure.logging=DEBUG
+# logging.level.org.springframework.boot.web.embedded.tomcat=DEBUG
 spring.datasource.platform=postgres
 
 spring.servlet.multipart.max-file-size=1MB
