only one picture for user and several for establishment

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,5 +19,10 @@ spring.main.banner-mode=off
 # logging.level.org.springframework.boot.web.embedded.tomcat=DEBUG
 spring.datasource.platform=postgres
 
-spring.servlet.multipart.max-file-size=1MB
-spring.servlet.multipart.max-request-size=1MB
+
+# FOR INSERT FILE/IMAGE IN BDD
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.file-size-threshold=2MB
+spring.servlet.multipart.max-file-size=200MB
+spring.servlet.multipart.max-request-size=200MB
+
