--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,6 @@
 server.servlet.context-path= /api
 
-spring.datasource.url= jdbc:postgresql://localhost:5432/mood?createDatabaseIfNotExit=true
-spring.datasource.username=admin
-spring.datasource.password=admin
+spring.profiles.active=prod
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation= true
