add Insert Data to BDD function and modification image controller

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 server.servlet.context-path= /api
+elasticsearch.url=localhost:9200
 
 spring.datasource.url= jdbc:postgresql://localhost:5432/mood?createDatabaseIfNotExit=true
 spring.datasource.username=root
@@ -23,6 +24,6 @@ spring.datasource.platform=postgres
 # FOR INSERT FILE/IMAGE IN BDD
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.file-size-threshold=2MB
-spring.servlet.multipart.max-file-size=200MB
-spring.servlet.multipart.max-request-size=200MB
+spring.servlet.multipart.max-file-size=2MB
+spring.servlet.multipart.max-request-size=2MB
 
