--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 server.servlet.context-path= /api
+server.port= 8080
 elasticsearch.url=localhost:9200
+image.default.name= default_image.png
 
 spring.datasource.url= jdbc:postgresql://localhost:5432/mood?createDatabaseIfNotExit=true
 spring.datasource.username=root
