--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.servlet.context-path= /api
 server.port= 8080
-elasticsearch.url=localhost:9200
+min.with.in.discance.search= 10.0
 image.default.name= default_image.png
 
 spring.datasource.url= jdbc:postgresql://localhost:5432/mood?createDatabaseIfNotExit=true
