--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,4 +1,4 @@
 # PROD DATASOURCE
 spring.datasource.url= jdbc:postgresql://localhost:5432/mood?createDatabaseIfNotExit=true
-spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.username=mood_PROD_developper
+spring.datasource.password=moodPROD
