prepare heroky doployment

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,4 +1,4 @@
 # DEV DATASOURCE
-spring.datasource.url= jdbc:postgresql://localhost:5432/https://spring.io/guides/gs/uploading-files/?createDatabaseIfNotExit=true
-spring.datasource.username=mood_DEV_developper
-spring.datasource.password=moodDEV
+spring.datasource.url= jdbc:postgresql://localhost:5432/mood?createDatabaseIfNotExit=true
+spring.datasource.username=mood
+spring.datasource.password=root
