add aplication properties files

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.port= 8080
 min.with.in.discance.search= 10.0
 image.default.name= default_image.png
 
-spring.profiles.active=prod
+spring.profiles.active=dev
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation= true
