--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,13 @@
 server.servlet.context-path= /api
 server.port= 8080
+
+# SET DEFAULT DISTANCE FOR LOCALISATION SEARCH
 min.with.in.discance.search= 10.0
+
+# NAMING DEFAULT IMAGE
 image.default.name= default_image.png
 
+# ENVIRONMENT
 spring.profiles.active=prod
 
 spring.jpa.show-sql=true
